additions to homepage

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&family=Titillium+Web:wght@900&display=swap"
     rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Rozha+One&display=swap" rel="stylesheet">
+
 
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
